# cheritrace

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile.in  LICENSE  addressmap.cc  addressmap.hh  cheri.hh  cheritrace.hh  disassembler.cc  disassembler.hh  objectfile.cc  objectfile.hh  streamtrace.cc  streamtrace.hh  tracewriter.cc
Python/: CMakeLists.txt  callback.cc  callback.hh  cheritrace.i  setup.py.in  std_bitset.i
Tests/: CMakeLists.txt  address_map.cc  assemble.cc  caphwreg_test.cc  caphwreg_test.cvtrace  cheri128.trace  cheri128.trace.txt  csetbounds.cc  csetbounds.trace  debug.cc  defer_helloworld.cc  defer_preload.cc  defer_preload_long.cc  disassemble.cc  disassemble_object.cc  disassemble_v2.cc  filter.cc  hello_world  keyframe_serialize.cc  long.cvtrace  long.trace  object.cc  procstat  regset_update.cc  regset_update.trace  regvalues.cc  scan.cc  shared_debug.cc  shared_object.cc  short.trace  simple.cc  simple_v2.cc  v2.trace  v2.trace.xz  write.cc
Tests/Python/: CMakeLists.txt  defer_preload.py  exception.py  instr_parser.py  instr_writer.py  notifier.py  simple.py
Tools/: CMakeLists.txt  tracedump.cc
